// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribution gap renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  overflow: hidden;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 50%;
  overflow: hidden;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 66.66%;
  overflow: hidden;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 33.33%;
  overflow: hidden;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 6px;
}

.c5 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c7 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c8 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c9 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c10 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 24px;
}

.c11 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 48px;
}

.c12 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 48px;
}

@media only screen and (max-width: 768px) {
  .c3 {
    width: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    height: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    width: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    height: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    width: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    height: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    width: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    height: 24px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="c3"
    />
    <div
      class="c2"
    >
      <div
        class="c4"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="c5"
      />
      <div
        class="c6"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="c7"
    />
    <div
      class="c2"
    >
      <div
        class="c4"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="c8"
      />
      <div
        class="c6"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="c9"
    />
    <div
      class="c2"
    >
      <div
        class="c4"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="c10"
      />
      <div
        class="c6"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="c11"
    />
    <div
      class="c2"
    >
      <div
        class="c4"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="c12"
      />
      <div
        class="c6"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Distribution renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
/>
`;

exports[`Distribution renders outside grommet wrapper 1`] = `null`;

exports[`Distribution undefined value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  overflow: hidden;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 100%;
  overflow: hidden;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 0px;
  overflow: hidden;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 6px;
}

@media only screen and (max-width: 768px) {
  .c3 {
    width: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="c3"
    />
    <div
      class="c4"
    >
      <span />
    </div>
  </div>
</div>
`;

exports[`Distribution values renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  overflow: hidden;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 75%;
  overflow: hidden;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 25%;
  overflow: hidden;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 50%;
  overflow: hidden;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 1;
  flex-basis: 50%;
  overflow: hidden;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 66.66%;
  overflow: hidden;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1;
  flex-basis: 33.33%;
  overflow: hidden;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 6px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

@media only screen and (max-width: 768px) {
  .c3 {
    width: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="c3"
    />
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span>
          3
        </span>
      </div>
      <div
        class="c6"
      />
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <span>
            2
          </span>
        </div>
        <div
          class="c3"
        />
        <div
          class="c9"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
